tests/sema/fail/v24_fail_main_return_type.ep
# COMPILE_FAIL: main function must return void, got i64
fun main(): i64 {
    ret 0
}
